# netlink-dispatcher

./: Cargo.toml  Dockerfile
.github/workflows/: rust.yml
debian/: service  socket
src/: lib.rs  main.rs  route_socket.rs
systemd/: netlink-dispatcher.service  netlink-dispatcher.socket
