[package]
name = "netlink-dispatcher"
version = "0.1.0"
edition = "2021"
authors = ["WGH"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.23"
humantime = "2.1.0"
libc = "0.2.132"
listenfd = "1.0.0"
log = "0.4.17"
netlink-packet-route = "0.13.0"
netlink-proto = "0.10.0"
nix = "0.25.0"
rtnetlink = "0.11.0"
tokio = { version = "1.20.1", features = ["rt", "time", "macros", "sync", "process"] }

[package.metadata.deb]
depends = "$auto, debianutils"
assets = [
    ["target/release/netlink-dispatcher", "usr/sbin/netlink-dispatcher", "755"],
]
maintainer-scripts = "debian/"
systemd-units = { }
